<resources>
    <string name="app_name">FilesManage</string>
    <string name="Title">文件管理</string>
    <string name="Devices">插入设备</string>
    <string name="Preview">选择要预览的文件</string>
    <string name="Return">返回上一级</string>
    <string name="OpenDirectory">打开文件夹</string>
    <string name="NewDirectory">新建文件夹</string>
    <string name="More">更多</string>
    <string name="Path">文件路径></string>
    <string name="FileName">名称</string>
    <string name="ModifyTime">修改时间</string>
    <string name="Type">类型</string>
    <string name="Size">大小</string>
    <string name="FileRenameInput">请输入新文件夹名</string>
    <string name="FileRenameLenError">文件名长度必须为1-255!</string>
    <string name="FileRenameFormatError">文件名格式错误!</string>
    <string name="Confirm">确定</string>
    <string name="Cancel">取消</string>
    <string name="Rename">重命名</string>
    <string name="Copy">复制</string>
    <string name="Move">移动</string>
    <string name="Delete">删除</string>
    <string name="DirectoryNameLenError">文件夹名长度必须为1-255!</string>
    <string name="DirectoryNameFormatError">文件夹名格式错误!</string>
    <string name="ReturnURoot">返回到U盘根目录</string>
    <string name="ReturnFRoot">返回到fdisk根目录</string>
    <string name="EnterDirectory">进入目录</string>
    <string name="NoEnterDocument">不能进入文件</string>
    <string name="ChooseFileOrDirectory">请选择要操作的目录或文件!</string>
    <string name="RequestDelete">你确定要删除吗?</string>
    <string name="SameDirectory">选择路径和当前路径一致!</string>
    <string name="Hint">提示</string>
    <string name="EntitleFile">请输入新建文件夹名?</string>
    <string name="CreatFileFail">创建文件夹失败!</string>
    <string name="RootDirectory">当前已经是根目录!</string>
    <string name="OnlyOneDirectory">只能选择一个进入的目录!</string>
    <string name="DontIsDirectory">当前选择的不是文件夹!</string>
    <string name="MoveDirectory">移动文件夹</string>
    <string name="CopyDirectory">复制文件夹</string>
    <string name="MoveFile">移动文件</string>
    <string name="CopyFile">复制文件</string>
    <string name="RenameDirectory">重命名文件夹</string>
    <string name="RenameFile">重命名文件</string>
    <string name="InputNewFileName">请输入新文件名?</string>
    <string name="Directory">文件夹</string>
    <string name="File">文件</string>
    <string name="MoveToDirectory">移动到目标目录</string>
    <string name="CopyToDirectory">复制到目标目录</string>
</resources>
