<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/Path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="/storage/sdcard/fdisk"/>
    <Button
        android:id="@+id/URoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ReturnURoot"
        />
    <Button
        android:id="@+id/FRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ReturnFRoot"
        />
    <Button
        android:id="@+id/Return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Return"/>
    <Button
        android:id="@+id/EnterDirectory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterDirectory"/>
    <ListView
        android:id="@+id/PathList"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_weight="1">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/Confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Confirm"/>
        <Button
            android:id="@+id/Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel"/>
    </LinearLayout>
</LinearLayout>