<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--suppress AndroidUnknownAttribute, AndroidUnknownAttribute -->
    <EditText
        android:id="@+id/RenameInput"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:hint="@string/FileRenameInput"
        android:singleLine="true"
        android:inputType="text"
        />
    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <android.support.constraint.Placeholder
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/Confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm"
            android:gravity="center"
            android:enabled="false"/>
        <Button
            android:id="@+id/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>