<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight = "5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ToggleButton
            android:id="@+id/AllButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:checked="false"
            android:background="@drawable/radio"
            android:textOff=""
            android:textOn=""
            android:layout_gravity="start|center_vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/FileName"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="#96989d"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/ModifyTime"
        android:gravity="start|center_vertical"
        android:layout_weight="3"
        android:layout_marginLeft="5dp"
        />
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="#96989d"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/Type"
        android:gravity="start|center_vertical"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        />
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="#96989d"
        />
    <TextView
        android:id="@+id/hh"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/Size"
        android:gravity="start|center_vertical"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        />
</LinearLayout>
