<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/ButBackground"
    >
    <!--状态栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="#eef0f5"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginLeft="3dp">

            <Button
                android:id="@+id/Exit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left|center_vertical"
                android:background="@mipmap/arrow"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Title"
            android:textColor="#da983a"
            android:textSize="30sp"
            android:gravity="center"
            android:textAlignment="center"/>
        <android.support.constraint.Placeholder
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>

    <!--下半部-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/ButBackground">
        <!--插入设备-->
        <LinearLayout
            android:layout_width="225dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">
                <android.support.constraint.Placeholder
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/test"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/udisk" />
                <android.support.constraint.Placeholder
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Devices"
                    android:gravity="center"/>
                <android.support.constraint.Placeholder
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!--设备列表-->
            <ListView
                android:id="@+id/DeviceList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                />
            <TextView
                android:id="@+id/Preview"
                android:layout_height="286dp"
                android:layout_width="match_parent"
                android:text="@string/Preview"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#96989d"
            />
        <!--右边-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/ButBackground">
            <!--文件操作-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/Return"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:drawableTop="@mipmap/ret"
                    android:drawableTintMode="screen"
                    android:gravity="center"
                    android:text="@string/Return"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />


                <Button
                    android:id="@+id/Open"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:drawableTop="@mipmap/file"
                    android:gravity="center"
                    android:text="@string/OpenDirectory"
                    android:background="@null"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                   />


                <Button
                    android:id="@+id/New"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:drawableTop="@mipmap/create"
                    android:gravity="center"
                    android:text="@string/NewDirectory"
                    android:background="@null"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />


                <Button
                    android:id="@+id/More"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:drawableTop="@mipmap/more"
                    android:gravity="center"
                    android:text="@string/More"
                    android:background="@null"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />
                <!--文件路劲-->
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#96989d"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text="@string/Path"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
               />
             <TextView
                 android:id="@+id/Path"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text=""
                 />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#96989d"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ListView
                    android:id="@+id/FileList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:headerDividersEnabled="true"
                    >
                </ListView>
                <include
                    android:id="@+id/ListHead"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    layout="@layout/listheader"
                    android:visibility="gone"
                    >
                </include>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>



</android.support.v7.widget.LinearLayoutCompat>